# url-shortener-api

./: .dockerignore  .env.example  .gitignore  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README  README.md  README.ru.md  SECURITY.md  docker-compose.yml  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vercel.json  vite.config.ts  vitest.config.ts
frontend/src/: i18n.ts  index.css  main.tsx
frontend/src/api/: client.ts  generated.ts  types.ts
frontend/src/app/: App.tsx  providers.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: AdminAccessDeniedPage.tsx  AdminDashboardPage.tsx  AdminLinksPage.tsx  AdminSettingsPage.tsx  AdminUsersPage.tsx  AnalyticsPage.tsx  FoldersPage.tsx  ForgotPasswordPage.tsx  HomePage.tsx  LinksPage.tsx  LoginPage.tsx  NotFoundPage.tsx  NotificationsPage.tsx  ProfilePage.tsx  RegisterPage.tsx  ResetPasswordPage.tsx  SettingsPage.tsx  VerifyEmailPage.tsx  admin-shared.tsx  shared.tsx
frontend/src/test/: admin-routes.test.tsx  home-behavior.test.tsx  link-status.test.tsx  navigation.test.tsx  refresh-flow.test.tsx  setup.ts  (+3 more)
scripts/: seed_db.py
src/: main.py
src/app/: demo_seed.py
tests/: conftest.py  test_accounts.py  test_admin_governance.py  test_api.py  test_me_features.py  test_seed_script.py  test_sql.py
tests/load/: locustfile.py
(+46 files in other folders)
