[project]
name = "url-shortener-api"
version = "1.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiosqlite==0.21.0",
    "psycopg[binary]==3.3.4",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "argon2-cffi==25.1.0",
    "email-validator==2.2.0",
    "fastapi==0.116.1",
    "idna==3.10",
    "PyJWT==2.10.1",
    "pydantic==2.13.4",
    "pydantic_core==2.47.0",
    "pydantic-settings==2.10.1",
    "python-multipart==0.0.20",
    "python-dotenv==1.1.1",
    "redis==4.6.0",
    "sniffio==1.3.1",
    "starlette==0.47.2",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.1",
    "uvicorn==0.35.0",
    "uvloop==0.21.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "UP"]
ignore = ["B008"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    '\.\.\.',
]
